[package]
name = "regex-cli-test"
version = "0.1.0"
edition = "2021"
description = "A command line tool for testing against regex patterns."
license = "MIT"
keywords = ["regex", "cli"]
categories = ["command-line-utilities", "text-processing"]
readme = "readme.md"
repository = "https://github.com/Proxxa/regex-cli"
homepage = "https://github.com/Proxxa/regex-cli"

# Designate binary name
[[bin]]
path = "src/main.rs"
name = "regex"

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
regex = "1.10.2"
